Add basic nav-bar

--- a/index.html
+++ b/index.html
@@ -18,9 +18,23 @@
 
   </head>
   <body>
+    <nav class="navbar navbar-default">
+      <!-- classes to separate the navigation bar from the main content -->
+      <div class="container-fluid">
+        <!-- good type of container for nav bars -->
+        <ul class="nav navbar-nav">
+          <!-- these classes makes the list display horizontally -->
+          <!-- ul saying here's a list of related things -->
+          <li class="active"><a href="#">Home</a></li>
+          <!-- active class tells user where they are. highlights this link -->
+          <li><a href="#">My photos</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!-- nav tags increase the accessibility of your site. for semantic meaning -->
     <div class="container">
       <!-- standard class for wrapping content -->
-      <h1>Hello!</h1>
+      <h1>Hello, welcome to my bootstrap site!</h1>
     </div>
 
     <script src="js/jquery.min.js"></script>
