Add images and photo, album, and photo1 pages

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </div> <!--/  collapsed navbar -->
 
         <div
-        class="collapse navbar-collapse"
-        id="main_navbar"> <!-- start un-collapsed nav-bar -->
+          class="collapse navbar-collapse"
+          id="main_navbar"> <!-- start un-collapsed nav-bar -->
           <!-- these classes makes it collapsable -->
           <ul
             class="nav navbar-nav">
@@ -49,7 +49,8 @@
             <!-- ul saying here's a list of related things -->
             <li class="active"><a href="#">Home</a></li>
             <!-- active class tells user where they are. highlights this link -->
-            <li><a href="#">My photos</a></li>
+            <li><a href="albums.html">Albums</a></li>
+            <li><a href="photos.html">All photos</a></li>
           </ul>
         </div> <!-- / un-collapsed nav-bar -->
 
