--- a/albums.html
+++ b/albums.html
@@ -4,6 +4,7 @@
    <title></title>
 
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -38,9 +39,11 @@
       </div>
     </nav>
     <div class="container">
-      <h1>Hello, welcome to my bootstrap site!</h1>
+      <h1>Here are my albums</h1>
 
-      <img src="./images/img_1.jpg" alt="" />
+      <a href="photos.html"><img class="album_cover" src="./images/img_1.jpg" alt="graffiti cover image" /></a>
+      <img class="album_cover" src="./images/img_2.jpg" alt="full english breakfast" />
+      <img class="album_cover" src="./images/img_3.jpg" alt="racks of cheese" />
     </div>
 
     <script src="js/jquery.min.js"></script>
