--- a/photo1.html
+++ b/photo1.html
@@ -4,6 +4,7 @@
    <title></title>
 
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -38,7 +39,9 @@
       </div>
     </nav>
     <div class="container">
-      <h1>Hello, welcome to my bootstrap site!</h1>
+      <h1>Some graffiti I found</h1>
+
+      <img class="single_photo" src="./images/img_1.jpg" alt="some graffiti" />
     </div>
 
     <script src="js/jquery.min.js"></script>
