--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
     <div class="container">
       <!-- standard class for wrapping content -->
       <h1>Hello, welcome to my bootstrap site!</h1>
+      <ol class="breadcrumb">
+        <!-- use ol for our breadcrumbs because the order matters here unlike the nav-bar -->
+        <li><a href="index.html">Home</a></li>
+        <!-- for consistency's sake, it's good to include the home page even if they're already there
+              it's less confusing for the user -->
+      </ol>
     </div>
 
     <script src="js/jquery.min.js"></script>
