--- a/photos.html
+++ b/photos.html
@@ -30,9 +30,9 @@
           id="main_navbar">
           <ul
             class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="albums.html">Albums</a></li>
-            <li><a href="photos.html">All photos</a></li>
+            <li class="active"><a href="photos.html">All photos</a></li>
           </ul>
         </div>
 
@@ -40,6 +40,11 @@
     </nav>
     <div class="container">
       <h1>Here are the photos:</h1>
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="albums.html">Albums</a></li>
+        <li><a href="photos.html">Graffiti album</a></li>
+      </ol>
 
       <a href="photo1.html"><img class="photo_list" src="./images/img_1.jpg" alt="graffiti cover image" /></a>
       <a href="photo1.html"><img class="photo_list" src="./images/img_2.jpg" alt="graffiti cover image" /></a>
