--- a/albums.html
+++ b/albums.html
@@ -31,8 +31,8 @@
           id="main_navbar">
           <ul
             class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="albums.html">Albums</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="albums.html">Albums</a></li>
             <li><a href="photos.html">All photos</a></li>
           </ul>
         </div>
@@ -41,7 +41,15 @@
     <div class="container">
       <h1>Here are my albums</h1>
 
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="albums.html">Albums</a></li>
+        <!-- give these breadcrumbs names that are consistent with the navigation -->
+      </ol>
       <a href="photos.html"><img class="album_cover" src="./images/img_1.jpg" alt="graffiti cover image" /></a>
+      <p>
+        Graffiti album
+      </p>
       <img class="album_cover" src="./images/img_2.jpg" alt="full english breakfast" />
       <img class="album_cover" src="./images/img_3.jpg" alt="racks of cheese" />
     </div>
