--- a/photo1.html
+++ b/photo1.html
@@ -30,8 +30,8 @@
           id="main_navbar">
           <ul
             class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="albums.html">Albums</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="albums.html">Albums</a></li>
             <li><a href="photos.html">All photos</a></li>
           </ul>
         </div>
@@ -40,6 +40,12 @@
     </nav>
     <div class="container">
       <h1>Some graffiti I found</h1>
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="albums.html">Albums</a></li>
+        <li><a href="photos.html">Graffiti album</a></li>
+        <li><a href="photo1.html">Graffiti picture</a></li>
+      </ol>
 
       <img class="single_photo" src="./images/img_1.jpg" alt="some graffiti" />
     </div>
