Add responsive layouts

--- a/photos.html
+++ b/photos.html
@@ -46,12 +46,42 @@
         <li><a href="photos.html">Graffiti album</a></li>
       </ol>
 
-      <a href="photo1.html"><img class="photo_list" src="./images/img_1.jpg" alt="graffiti cover image" /></a>
-      <a href="photo1.html"><img class="photo_list" src="./images/img_2.jpg" alt="graffiti cover image" /></a>
-      <a href="photo1.html"><img class="photo_list" src="./images/img_3.jpg" alt="graffiti cover image" /></a>
-      <a href="photo1.html"><img class="photo_list" src="./images/img_4.jpg" alt="graffiti cover image" /></a>
-      <a href="photo1.html"><img class="photo_list" src="./images/img_5.jpg" alt="graffiti cover image" /></a>
-    </div>
+      <div class="row">
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_1.jpg" alt="graffiti cover image" /></a>
+        </div>
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_2.jpg" alt="graffiti cover image" /></a>
+        </div>
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_3.jpg" alt="graffiti cover image" /></a>
+        </div>
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_4.jpg" alt="graffiti cover image" /></a>
+        </div>
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_5.jpg" alt="graffiti cover image" /></a>
+        </div>
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_6.jpg" alt="graffiti cover image" /></a>
+        </div>
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_7.jpg" alt="graffiti cover image" /></a>
+        </div>
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_8.jpg" alt="graffiti cover image" /></a>
+        </div>
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_9.jpg" alt="graffiti cover image" /></a>
+        </div>
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_10.jpg" alt="graffiti cover image" /></a>
+        </div>
+        <div class="col-xs-6 col-md-3 col-lg-2">
+          <a href="photo1.html"><img class="photo_list" src="./images/img_11.jpg" alt="graffiti cover image" /></a>
+        </div>
+      </div>
+    </div><!-- / end of container -->
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
